Revert "use plasma_install_bundled_package"
This reverts commit 724f20a69c8547060963386698525cba70e3af8a.

Concept is fine, but currently we have severe CMake issues as well
as a major containment loading bug.

When re-reverting we need to be sure to test with clean install
prefixes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_definitions(-DTRANSLATION_DOMAIN=\"plasma_applet_org.kde.plasma.taskmanager\")
 
-plasma_install_bundled_package(package org.kde.plasma.taskmanager)
+plasma_install_package(package org.kde.plasma.taskmanager)
 
 set(taskmanagerplugin_SRCS
     plugin/backend.cpp
