[Task Manager] Use libnotificationmanager for notification badges and application job reporting
This removes the setting from the individual plasmoid and has it follow global settings in the new KCM.
Since the new JobsModel also emits application jobs via the Unity launcher API, the codepath for dealing with jobs is dropped
and instead it only listens to Unity signals now.

Differential Revision: https://phabricator.kde.org/D21061

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ target_link_libraries(taskmanagerplugin
                       KF5::KIOFileWidgets # KFilePlacesModel
                       KF5::Plasma
                       KF5::Service
-                      KF5::WindowSystem)
+                      KF5::WindowSystem
+                      PW::LibNotificationManager)
 
 install(TARGETS taskmanagerplugin DESTINATION ${KDE_INSTALL_QMLDIR}/org/kde/plasma/private/taskmanager)
