[Task Manager] Consider parent PID for audio stream
For modern web browsers, the audio stream isn't owned by the same process as the window, making the mapping fail.
When no PID is found for a window, check the streams whether the PID in question might be actually the parent PID.

Differential Revision: https://phabricator.kde.org/D25874

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ target_link_libraries(taskmanagerplugin
                       KF5::KIOWidgets
                       KF5::KIOFileWidgets # KFilePlacesModel
                       KF5::Plasma
+                      KF5::ProcessCore
                       KF5::Service
                       KF5::WindowSystem
                       PW::LibNotificationManager)
