[Task Manager] Port backend to ApplicationLauncherJob
In the process, port jump list actions from custom KDesktopFile parsing to KServiceAction on KService, simplifying the code a lot.
Also, use the new KNotificationJobUiDelegate to provide a Plasma notification on error rather than a modal dialog box.

Differential Revision: https://phabricator.kde.org/D28286

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,8 +25,9 @@ target_link_libraries(taskmanagerplugin
                       KF5::ActivitiesStats
                       KF5::I18n
                       KF5::KIOCore
-                      KF5::KIOWidgets
+                      KF5::KIOGui
                       KF5::KIOFileWidgets # KFilePlacesModel
+                      KF5::Notifications # KNotificationJobUiDelegate
                       KF5::Plasma
                       KF5::ProcessCore
                       KF5::Service
