Fix Warning about KF5::ProcessCore target being deprecated
Reviewers: #plasma, ahiemstra

Reviewed By: ahiemstra

Subscribers: ahiemstra, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D29626

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ target_link_libraries(taskmanagerplugin
                       KF5::KIOFileWidgets # KFilePlacesModel
                       KF5::Notifications # KNotificationJobUiDelegate
                       KF5::Plasma
-                      KF5::ProcessCore
+                      KSysGuard::ProcessCore
                       KF5::Service
                       KF5::WindowSystem
                       PW::LibNotificationManager)
