[applets/taskmanager] Differentiate label from IOTM version
It used to be exactly the same as the one for the icons-only version,
which is wrong.

BUG: 431075
FIXED-IN: 5.21

--- a/package/metadata.desktop
+++ b/package/metadata.desktop
@@ -81,7 +81,7 @@ Name[wa]=Manaedjeu des bouyes
 Name[x-test]=xxTask Managerxx
 Name[zh_CN]=任务管理器
 Name[zh_TW]=工作管理員
-Comment=Switch between running applications
+Comment=Switch between tasks
 Comment[ar]=بدّل بين التطبيقات التي تعمل
 Comment[az]=İşlək Tətbiqlər arası keçid
 Comment[be@latin]=Pieraklučeńnie dziejnych aplikacyjaŭ
